--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h2>Slides</h2>
+    <h2>simspect</h2>
     <a href="DefenseSpecifications.pptx">Download / view slides</a>
   </body>
 </html>
