--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h2>simspect</h2>
-    <a href="DefenseSpecifications.pptx">Download / view slides</a>
+  <body style="margin:0;padding:0;height:100vh;">
+    <embed src="slides.pdf" type="application/pdf" width="100%" height="100%">
   </body>
 </html>
